package com.myzone.archive.core;

/**
 * @author myzone
 * @date 9/8/13 3:54 PM
 */
public interface Service<A, R> {

}
